News UAT/force-app/main/default/objects/AccountReport__c/fields/Rolling_12_Months_Print__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Months_Print__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>Rolling 12 Months Print</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>