News UAT/force-app/main/default/objects/AccountReport__c/fields/Share_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet__c</fullName>
    <description>NextGen - For use for CPQ</description>
    <inlineHelpText>The estimated percentage of a customers total marketing budget which is (or is expected to be) spent with News.</inlineHelpText>
    <label>Share of Wallet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;50%</fullName>
            </value>
            <value>
                <fullName>&gt;=50%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>&gt;50%</fullName>
                <isActive>false</isActive>
                <label>&gt;50%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>