News UAT/force-app/main/default/objects/AccountReport__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Xtend Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
                <default>true</default>
                <label>Tier 3</label>
            </value>
            <value>
                <fullName>Tier 0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>