News UAT/force-app/main/default/objects/AccountReport__c/fields/Total_Agency_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Agency_Spend__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Agency Spend - rolled up from all Bookings where the Agency is the Payer (YTD)</description>
    <inlineHelpText>Total Agency Spend - rolled up from all Bookings where the Agency is the Payer (YTD)</inlineHelpText>
    <label>Total Agency Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>