News UAT/force-app/main/default/objects/AccountReport__c/fields/Total_Customer_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Spend__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Customer Spend - rolled up from Total Cost of all Bookings related to the Customer (YTD)</description>
    <inlineHelpText>Total Customer Spend - rolled up from Total Cost of all Bookings related to the Customer (YTD)</inlineHelpText>
    <label>Total Customer Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>