News UAT/force-app/main/default/objects/AccountReport__c/fields/Total_Group_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Group_Spend__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Group Spend for the Customer/Agency Hierarchy (this Customer and all below) for all Bookings (YTD)</description>
    <inlineHelpText>Total Group Spend for the Customer/Agency Hierarchy (this Customer and all below) for all Bookings (YTD)</inlineHelpText>
    <label>Total Group Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>