News UAT/force-app/main/default/objects/AccountReport__c/fields/TotalNewsCorpSpend__c.field-meta.xml
<CustomField>
    <fullName>TotalNewsCorpSpend__c</fullName>
    <description>NextGen</description>
    <label>Total News Corp Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>