News UAT/force-app/main/default/objects/AccountReport__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Managed</fullName>
            </value>
            <value>
                <fullName>Locally Activated</fullName>
            </value>
            <value>
                <fullName>Multi Managed</fullName>
            </value>
            <value>
                <fullName>Non Account Managed</fullName>
                <default>true</default>
                <label>Non Account Managed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>