News UAT/force-app/main/default/objects/AccountReport__c/fields/Ultimate_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ultimate Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>