News UAT/force-app/main/default/objects/AccountReport__c/fields/UserisOwner__c.field-meta.xml
<CustomField>
    <fullName>UserisOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If current user is owner</description>
    <label>UserisOwner</label>
    <type>Checkbox</type>
</CustomField>