News UAT/force-app/main/default/objects/AccountReport__c/fields/Xtend_Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Xtend_Last_Transaction_Date__c</fullName>
    <label>Xtend Last Transaction Date</label>
    <type>Date</type>
</CustomField>