News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/Agency_Account_Type.recordType-meta.xml
<RecordType>
    <fullName>Agency_Account_Type</fullName>
    <active>true</active>
    <description>E.g. Advertising, Media, Creative, PR, and more</description>
    <label>Agency Account</label>
</RecordType>