News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/Business_Account_Type.recordType-meta.xml
<RecordType>
    <fullName>Business_Account_Type</fullName>
    <active>true</active>
    <description>For Business accounts that are not Agencies</description>
    <label>Business Account</label>
</RecordType>