News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/Dormant_Account.recordType-meta.xml
<RecordType>
    <fullName>Dormant_Account</fullName>
    <active>false</active>
    <label>Dormant Account</label>
</RecordType>