News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/IMA_Independent_Agencies.recordType-meta.xml
<RecordType>
    <fullName>IMA_Independent_Agencies</fullName>
    <active>false</active>
    <description>Independent Agencies</description>
    <label>IMA - Independent Agencies</label>
</RecordType>