News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/IMA_Major_Account.recordType-meta.xml
<RecordType>
    <fullName>IMA_Major_Account</fullName>
    <active>false</active>
    <description>Major Account</description>
    <label>IMA - Major Account</label>
</RecordType>