News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/KAC.recordType-meta.xml
<RecordType>
    <fullName>KAC</fullName>
    <active>true</active>
    <description>Key Accounts &amp; Consortium team</description>
    <label>KAC</label>
</RecordType>