News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/KAC_Consortium.recordType-meta.xml
<RecordType>
    <fullName>KAC_Consortium</fullName>
    <active>false</active>
    <description>Consortium</description>
    <label>KAC - Consortium</label>
</RecordType>