News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/KAC_Key_Account.recordType-meta.xml
<RecordType>
    <fullName>KAC_Key_Account</fullName>
    <active>false</active>
    <description>Key Account</description>
    <label>KAC - Key Account</label>
</RecordType>