News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/Prospecting_Account.recordType-meta.xml
<RecordType>
    <fullName>Prospecting_Account</fullName>
    <active>true</active>
    <description>An account we are prospecting but is not yet a business account.</description>
    <label>Prospecting Account</label>
</RecordType>