News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/Real_Estate.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate</fullName>
    <active>true</active>
    <description>Real Estate team</description>
    <label>Real Estate</label>
</RecordType>