News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/Sole_Trader.recordType-meta.xml
<RecordType>
    <fullName>Sole_Trader</fullName>
    <active>false</active>
    <description>NextGen record Type</description>
    <label>Sole Trader</label>
</RecordType>