News UAT/force-app/main/default/objects/AccountReport__c/recordTypes/The_Aus_Regional.recordType-meta.xml
<RecordType>
    <fullName>The_Aus_Regional</fullName>
    <active>true</active>
    <description>The Australian or Regional teams</description>
    <label>The Aus/Regional</label>
</RecordType>